src/test/ui/issues/issue-20616-6.stderr
error: expected one of `>`, const, lifetime, or type, found `,`
  --> $DIR/issue-20616-6.rs:25:26
   |
LL | type Type_6 = Type_5_<'a,,>;
   |                          ^ expected one of `>`, const, lifetime, or type

error: aborting due to previous error

